<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Crear">

    <ImageView
            android:layout_width="227dp"
            android:layout_height="209dp" app:srcCompat="@drawable/p"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="78dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="286dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="78dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText

            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:text="@string/Nombre"
            android:ems="10"
            android:id="@+id/nombre" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="143dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/telefono" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="26dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Telefono"
            android:ems="10"
            android:id="@+id/telefono" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/nombre" android:layout_marginBottom="19dp"
            app:layout_constraintBottom_toTopOf="@+id/email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="26dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Email"
            android:ems="10"
            android:id="@+id/email" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/telefono" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="143dp" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/crear" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="26dp"/>
    <Button
            android:text="@string/crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crear"
            app:layout_constraintTop_toBottomOf="@+id/email" app:layout_constraintEnd_toStartOf="@+id/back"
            android:layout_marginEnd="57dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="7dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginEnd="78dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toEndOf="@+id/crear"
            android:layout_marginStart="57dp" app:layout_constraintVertical_bias="0.0" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>